# probability-fun

./: .coverage  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ruff-autoformat.yml  ruff-check.yml  tests.yml
notebooks/foundational problems/: 01_repeated_flips.ipynb
src/probability_simulator/: __init__.py  coin_flips.py  utility.py
src/probability_simulator/tests/: test_coin_flips.py  test_validate_fn.py
src/probability_simulator/validation/: README.md  __init__.py  fields.py  functions.py  interval.py  numbers.py
tests/: test_coin_flips.py  test_validate_interval.py  test_validator_field.py  test_validator_numbers.py
